--- a/plugins/BlackTheme/Resources/css/module/module-brand.scss
+++ b/plugins/BlackTheme/Resources/css/module/module-brand.scss
@@ -13,16 +13,14 @@
     display: flex;
     align-items: center; // flex-start | center
     justify-content: center; // flex-end | center | space-between
-    box-shadow: 0 6px 18px rgba(0, 0, 0, .07);
     margin-bottom: 10px;
     height: 120px;
     overflow: hidden;
-    border: 1px solid transparent;
     transition: all 0.3s ease-in-out;
 
     &:hover {
-      box-shadow: 0 6px 18px rgba(0, 0, 0, .1);
-      border: 1px solid $primary;
+      transform: scale(1.1);
+      // border: 1px solid $primary;
     }
 
     > img {
