--- a/plugins/BlackTheme/Resources/css/module/module-tab-product.scss
+++ b/plugins/BlackTheme/Resources/css/module/module-tab-product.scss
@@ -15,11 +15,9 @@
 
   .nav {
     .nav-link {
-      color: #6c757d;
-      font-size: .9rem;
+      font-size: 0.9rem;
 
       &.active {
-        color: #111;
         font-weight: bold;
       }
     }
