--- a/plugins/BlackTheme/Resources/css/page-brands.scss
+++ b/plugins/BlackTheme/Resources/css/page-brands.scss
@@ -13,12 +13,11 @@ body.page-brands {
     display: flex;
     align-items: center; // flex-start | center
     justify-content: center; // flex-end | center | space-between
-    box-shadow: 0 6px 18px rgba(0, 0, 0, .07);
     margin-bottom: 10px;
     height: 133px;
     width: 100%;
 
-    >img {
+    > img {
       max-height: 100%;
     }
   }
@@ -28,7 +27,6 @@ body.page-brands {
       list-style: none;
 
       a {
-        color: #242424;
         text-decoration: none;
       }
     }
@@ -43,25 +41,12 @@ body.page-brands {
       li {
         display: inline-block;
         margin-bottom: 6px;
-
-        & + .list-group-item {
-          border-left: 1px solid #e4e4e4;
-        }
       }
     }
 
-    >li>a {
-      color: #242424;
-      transition: all .3s;
+    > li > a {
+      transition: all 0.3s;
       text-decoration: none;
-
-      &:hover {
-        background-color: #eee;
-      }
-
-      &:active {
-        background-color: #aaa;
-      }
     }
   }
 }
