--- a/plugins/BlackTheme/Resources/css/product-style.scss
+++ b/plugins/BlackTheme/Resources/css/product-style.scss
@@ -11,7 +11,6 @@
 .product-list-wrap {
   .col-12:not(:last-of-type) {
     .product-wrap {
-      border-bottom: 1px solid #E6E6E6;
       margin-bottom: 1.4rem;
       padding-bottom: 1.4rem;
 
@@ -35,7 +34,6 @@
   text-align: center;
   padding-bottom: .7rem;
   transition: all 0.3s ease-in-out;
-  background-color: #fff;
 
   @media (min-width: 768px) {
     margin-bottom: 20px;
@@ -119,10 +117,8 @@
       }
 
       button {
-        background-color: #111;
         font-weight: bold;
         border: none;
-        border-right: 1px solid #333;
         border-radius: 0;
         &:last-child {
           border-right: none;
@@ -133,7 +129,7 @@
         }
 
         &:hover {
-          background-color: rgb(70, 70, 70);
+          opacity: 0.9;
         }
       }
     }
@@ -141,8 +137,6 @@
 
   @media (min-width: 768px) {
     &:hover {
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
-
       .button-wrap {
         bottom: 0;
         opacity: 1;
@@ -162,7 +156,6 @@
 
   .product-price {
     .price-new {
-      color: $primary;
       font-weight: bold;
       font-size: 1rem;
 
@@ -172,7 +165,6 @@
     }
 
     .price-old {
-      color: #aaa;
       margin-left: 4px;
       text-decoration: line-through;
     }
